# proactiveti

./: .gitignore  LICENSE  LICENSE-ALGORITHMS  README.md  ROADMAP.md  auth.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml
docs/: index.md  overview.md  querypedia.md  serverless.yml  setup.md
docs/proactiveti/: overview.md
docs/techniques/: censys.md  service_clustering.md  service_fingerprinting.md  shodan.md
modules/: schema.yml  template.yml
modules/IC1/: README.md
modules/acridrain_stealer/: README.md
modules/acunetix/: README.md
modules/agent_tesla/: README.md
modules/airavat/: README.md
modules/airstrike/: README.md
modules/alchimist/: README.md
modules/amadey/: README.md
modules/asyncrat/: README.md
modules/atomic_macos_stealer/: README.md
modules/badrat/: README.md
modules/bandit_stealer/: README.md
modules/bianlian/: README.md
modules/cobalt_strike/: README.md  cobalt_strike-listener-detected.yml  cobalt_strike-listener-tls-certificate-default-issuer-subject.yml  cobalt_strike-listener-tls-certificate-default-serial_number.yml  cobalt_strike-management-tls-certificate.yml
modules/covenant/: README.md
modules/dcrat/: README.md
modules/diceloader/: README.md
modules/empire/: README.md
modules/havoc/: README.md
modules/meduza_stealer/: README.md
modules/metasploit/: README.md
modules/meterpeter/: README.md
modules/nimplant/: README.md
modules/poshc2/: README.md
modules/powertrash/: README.md
modules/pupy/: README.md
modules/quasarrat/: README.md
modules/rengine/: README.md
modules/responder/: responder-listener-http-default-header.yml  responder-listener-http-service_banner.yml  responder-listener-smb-default-server_guid.yml
modules/rhadamanthys/: README.md
modules/risepro/: README.md
modules/sliver/: sliver-listener-tls-certificate-generated-format.yml  sliver-management-mtls-certificate-default-issuer-subject.yml
modules/starkiller/: README.md
modules/stealc/: README.md  stealc-listener-http-default-headers-response-v1-3-1.yml  stealc-listener-http-default-headers-response-v1.yml  stealc-listener-http-default-response-v1-5.yml
modules/venomrat/: README.md
modules/vidar/: README.md  vidar-listener-detected.yml  vidar-listener-tls-certificate-default-issuer.yml
modules/viper/: README.md
modules/vshell/: README.md
proactiveti/: __init__.py  constants.py
proactiveti/auth/: __init__.py  constants.py  schema.yml
proactiveti/auth/secrets_manager/: __init__.py  constants.py  secrets_manager.py
proactiveti/cli/: __init__.py  cli.py
proactiveti/providers/: __init__.py  helper.py
proactiveti/providers/censys/: __init__.py  search.py  transform.py
proactiveti/providers/shodan/: __init__.py  search.py  transform.py
proactiveti/utils/: __init__.py  files.py  validators.py
pycli/: __init__.py
pycli/cli/: __init__.py  cli.py
tests/proactiveti/providers/censys/: test_censys_transform.py
tests/proactiveti/providers/shodan/: test_shodan_transform.py
