[tool.poetry]
name = "proactiveti"
version = "0.1.0"
description = "Proactive Threat Intelligence."
authors = ["Brett Fitzpatrick"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.8"
coloredlogs = "^15.0.1"
censys = "^2.2.17"
shodan = "^1.31.0"
pyyaml = "^6.0.2"
aiofiles = "^24.1.0"
boto3 = "^1.37.37"
mypy-boto3-secretsmanager = "^1.37.0"
stix2 = "^3.0.1"
validators = "^0.34.0"
yamale = "^5.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
ipython = "^8.35.0"
ipykernel = "^6.29.5"
pytest = "^8.3.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.1"
mkdocs-material = "^9.6.12"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-include-markdown-plugin = "^7.1.5"

[tool.poetry.scripts]
proactiveti = "proactiveti.cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
