[tool.poetry]
name = "proactiveti"
version = "0.1.0"
description = "Proactive Threat Intelligence."
authors = ["Brett Fitzpatrick"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.2.1"
coloredlogs = "^15.0.1"
censys = "^2.2.18"
shodan = "^1.31.0"
pyyaml = "^6.0.2"
aiofiles = "^24.1.0"
boto3 = "^1.40.16"
mypy-boto3-secretsmanager = "^1.40.0"
stix2 = "^3.0.1"
validators = "^0.35.0"
yamale = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
ipython = "^8.37.0"
ipykernel = "^6.30.1"
pytest = "^8.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.30.0"
mkdocs-material = "^9.6.18"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-include-markdown-plugin = "^7.1.6"

[tool.poetry.scripts]
proactiveti = "proactiveti.cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
