[tool.poetry]
name = "proactiveti"
version = "0.1.0"
description = "Proactive Threat Intelligence."
authors = ["Brett Fitzpatrick"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.3.1"
coloredlogs = "^15.0.1"
censys = "^2.2.19"
shodan = "^1.31.0"
pyyaml = "^6.0.3"
aiofiles = "^24.1.0"
boto3 = "^1.42.59"
mypy-boto3-secretsmanager = "^1.42.8"
stix2 = "^3.0.2"
validators = "^0.35.0"
yamale = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.9"
ipython = "^8.38.0"
ipykernel = "^6.31.0"
pytest = "^8.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.30.1"
mkdocs-material = "^9.7.3"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-include-markdown-plugin = "^7.2.1"

[tool.poetry.scripts]
proactiveti = "proactiveti.cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
